Adição de buldogues e arquivos na main

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 			<option value="brabancon"> Griffon de Bruxelas </option>
 			<option value="briard"> Pastor-de-brie </option>
 			<option value="buhund/norwegian"> Buhund norueguês </option>
+			<option value="bulldog/boston"> Boston terrier </option>
+			<option value="bulldog/english"> Buldogue inglês </option>
+			<option value="bulldog/french"> Buldogue francês </option>
 		</select>
 	</div>
 	<div class="flex-container">
