Melhorias no css e adição de tratamento de erro 404

--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
 			<option value="bulldog/boston"> Boston terrier </option>
 			<option value="bulldog/english"> Buldogue inglês </option>
 			<option value="bulldog/french"> Buldogue francês </option>
+			<option value="bullterrier/staffordshire"> Staffordshire bull terrier </option>
+			<option value="cattledog/australian"> Boiadeiro-australiano </option>
+			<option value="cavapoo"> Cavapoo </option>
+			<option value="chihuahua"> Chihuahua (cão) </option>
+			<option value="chow"> Chow-chow </option>
+			<option value="clumber"> Clumber spaniel </option>
+			<option value="cockapoo"> Cockapoo </option>
+			<option value="collie/border"> Border collie </option>
+			<option value="coonhound"> Coonhound </option>
+			<option value="corgi/cardigan"> Welsh corgi cardigan </option>
+			<option value="cotondetulear"> Coton de Tulear </option>
+			<option value="dachshund"> Dachshund </option>
+			<option value="dalmatian"> Dálmata </option>
+			<option value="dane/great"> Dogue alemão </option>
+			<option value="deerhound/scottish"> Deerhound </option>
+			<option value="dhole"> Cão-selvagem-asiático </option>
+			<option value="dingo"> Dingo </option>
+			<option value="doberman"> Dobermann </option>
+			<option value="elkhound/norwegian"> Elkhound </option>
+			<option value="entlebucher"> Boiadeiro de Entlebuch </option>
+			<!-- <option value="eskimo"> Cão Esquimó Americano </option> traduzir da Wikipedia em inglês-->
+			<option value="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
+			<option value="frise/bichon"> Bichon Frisé </option>
 		</select>
 	</div>
 	<div class="flex-container">
