Correção da descrição do Dálmata

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<option value="corgi/cardigan"> Welsh corgi cardigan </option>
 			<option value="cotondetulear"> Coton de Tulear </option>
 			<option value="dachshund"> Dachshund </option>
-			<option value="dalmatian"> Dálmata </option>
+			<option value="dalmatian"> Dálmata (cão) </option>
 			<option value="dane/great"> Dogue alemão </option>
 			<option value="deerhound/scottish"> Deerhound </option>
 			<option value="dhole"> Cão-selvagem-asiático </option>
