Reinserção de id no select

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div>
 		<h2 id="titulo"> Selecione uma raça de cachorro para ver informações sobre ela </h2>
-		<select required="required">
+		<select id="select_cao" required="required">
 			<option selected disabled> Selecione uma raça </option>
 			<option value="affenpinscher"> Affenpinscher </option>
 			<option value="african"> Mabeco </option>
