Adição de algumas raças de cães e melhorias no código

--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
 			<!-- <option value="hound/plott"> Plott Hound </option> traduzir da Wikipedia em inglês-->
 			<option value="hound/walker"> Treeing Walker Coonhound </option>
 			<!-- <option value="husky"> Husky </option> traduzir da Wikipedia em inglês-->
+			<option value="keeshond"> Keeshond </option>
+			<option value="kelpie"> Kelpie australiano </option>
+			<option value="komondor"> Komondor </option>
+			<option value="kuvasz"> Kuvasz </option>
+			<option value="labradoodle"> Labradoodle </option>
+			<option value="labrador"> Labrador retriever </option>
+			<option value="leonberg"> Leonberger </option>
+			<option value="lhasa"> Lhasa apso </option>
+			<option value="malamute"> Malamute-do-alasca </option>
+			<option value="malinois"> Pastor-belga-malinois </option>
+			<option value="maltese"> Maltês (cão) </option>
+			<option value="mastiff/bull"> Bulmastife </option>
+			<option value="mastiff/english"> Mastim Inglês </option>
+			<option value="mastiff/tibetan"> Mastim tibetano </option>
+			<option value="mexicanhairless"> Pelado-mexicano </option>
+			<!-- <option value="mix"> </option> seria o vira-lata? -->
+			<option value="mountain/bernese"> Boiadeiro de Berna </option>
+			<option value="mountain/swiss"> Grande boiadeiro suíço </option>
+			<option value="newfoundland"> Terra-nova (cão) </option>
+			<option value="otterhound"> Otterhound </option>
 		</select>
 	</div>
 	<div class="flex-container">
