Inclusão de raças e de verbetes em inglês

--- a/index.html
+++ b/index.html
@@ -15,79 +15,102 @@
 		<h2 id="titulo"> Selecione uma raça de cachorro para ver informações sobre ela </h2>
 		<select id="select_cao" required="required">
 			<option selected disabled> Selecione uma raça </option>
-			<option value="affenpinscher"> Affenpinscher </option>
-			<option value="african"> Mabeco </option>
-			<option value="airedale"> Airedale terrier</option>
-			<option value="akita"> Akita Inu </option>
-			<option value="appenzeller"> Boiadeiro de Appenzell </option>
-			<option value="australian/shepherd"> Pastor-australiano </option>
-			<option value="basenji"> Basenji </option>
-			<option value="beagle"> Beagle </option>
-			<option value="bluetick"> Bluetick Coonhound </option>
-			<option value="borzoi"> Borzoi </option>
-			<option value="bouvier"> Boiadeiro da Flandres </option>
-			<option value="boxer"> Boxer </option>
-			<option value="brabancon"> Griffon de Bruxelas </option>
-			<option value="briard"> Pastor-de-brie </option>
-			<option value="buhund/norwegian"> Buhund norueguês </option>
-			<option value="bulldog/boston"> Boston terrier </option>
-			<option value="bulldog/english"> Buldogue inglês </option>
-			<option value="bulldog/french"> Buldogue francês </option>
-			<option value="bullterrier/staffordshire"> Staffordshire bull terrier </option>
-			<option value="cattledog/australian"> Boiadeiro-australiano </option>
-			<option value="cavapoo"> Cavapoo </option>
-			<option value="chihuahua"> Chihuahua (cão) </option>
-			<option value="chow"> Chow-chow </option>
-			<option value="clumber"> Clumber spaniel </option>
-			<option value="cockapoo"> Cockapoo </option>
-			<option value="collie/border"> Border collie </option>
-			<option value="coonhound"> Coonhound </option>
-			<option value="corgi/cardigan"> Welsh corgi cardigan </option>
-			<option value="cotondetulear"> Coton de Tulear </option>
-			<option value="dachshund"> Dachshund </option>
-			<option value="dalmatian"> Dálmata (cão) </option>
-			<option value="dane/great"> Dogue alemão </option>
-			<option value="deerhound/scottish"> Deerhound </option>
-			<option value="dhole"> Cão-selvagem-asiático </option>
-			<option value="dingo"> Dingo </option>
-			<option value="doberman"> Dobermann </option>
-			<option value="elkhound/norwegian"> Elkhound </option>
-			<option value="entlebucher"> Boiadeiro de Entlebuch </option>
-			<!-- <option value="eskimo"> American Eskimo Dog </option> traduzir da Wikipedia em inglês-->
-			<option value="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
-			<option value="frise/bichon"> Bichon Frisé </option>
-			<option value="germanshepherd"> Pastor-alemão </option>
-			<option value="greyhound/italian"> Galguinho italiano </option>
-			<option value="groenendael"> Pastor Belga Groenendael </option>
-			<option value="havanese"> Bichon havanês </option>
-			<option value="hound/afghan"> Galgo afegão </option>
-			<option value="hound/basset"> Basset Hound </option>
-			<option value="hound/blood"> Cão-de-santo-humberto </option>
-			<option value="hound/english"> Foxhound-inglês </option>
-			<option value="hound/ibizan"> Podengo ibicenco </option>
-			<!-- <option value="hound/plott"> Plott Hound </option> traduzir da Wikipedia em inglês-->
-			<option value="hound/walker"> Treeing Walker Coonhound </option>
-			<!-- <option value="husky"> Husky </option> traduzir da Wikipedia em inglês-->
-			<option value="keeshond"> Keeshond </option>
-			<option value="kelpie"> Kelpie australiano </option>
-			<option value="komondor"> Komondor </option>
-			<option value="kuvasz"> Kuvasz </option>
-			<option value="labradoodle"> Labradoodle </option>
-			<option value="labrador"> Labrador retriever </option>
-			<option value="leonberg"> Leonberger </option>
-			<option value="lhasa"> Lhasa apso </option>
-			<option value="malamute"> Malamute-do-alasca </option>
-			<option value="malinois"> Pastor-belga-malinois </option>
-			<option value="maltese"> Maltês (cão) </option>
-			<option value="mastiff/bull"> Bulmastife </option>
-			<option value="mastiff/english"> Mastim Inglês </option>
-			<option value="mastiff/tibetan"> Mastim tibetano </option>
-			<option value="mexicanhairless"> Pelado-mexicano </option>
+			<option id="pt" value="affenpinscher"> Affenpinscher </option>
+			<option id="pt" value="african"> Mabeco </option>
+			<option id="pt" value="airedale"> Airedale terrier</option>
+			<option id="pt" value="akita"> Akita Inu </option>
+			<option id="pt" value="appenzeller"> Boiadeiro de Appenzell </option>
+			<option id="pt" value="australian/shepherd"> Pastor-australiano </option>
+			<option id="pt" value="basenji"> Basenji </option>
+			<option id="pt" value="beagle"> Beagle </option>
+			<option id="pt" value="bluetick"> Bluetick Coonhound </option>
+			<option id="pt" value="borzoi"> Borzoi </option>
+			<option id="pt" value="bouvier"> Boiadeiro da Flandres </option>
+			<option id="pt" value="boxer"> Boxer </option>
+			<option id="pt" value="brabancon"> Griffon de Bruxelas </option>
+			<option id="pt" value="briard"> Pastor-de-brie </option>
+			<option id="pt" value="buhund/norwegian"> Buhund norueguês </option>
+			<option id="pt" value="bulldog/boston"> Boston terrier </option>
+			<option id="pt" value="bulldog/english"> Buldogue inglês </option>
+			<option id="pt" value="bulldog/french"> Buldogue francês </option>
+			<option id="pt" value ="bullterrier/staffordshire"> Staffordshire bull terrier </option>
+			<option id="pt" value ="cattledog/australian"> Boiadeiro-australiano </option>
+			<option id="pt" value ="cavapoo"> Cavapoo </option>
+			<option id="pt" value ="chihuahua"> Chihuahua (cão) </option>
+			<option id="pt" value ="chow"> Chow-chow </option>
+			<option id="pt" value ="clumber"> Clumber spaniel </option>
+			<option id="pt" value ="cockapoo"> Cockapoo </option>
+			<option id="pt" value ="collie/border"> Border collie </option>
+			<option id="pt" value ="coonhound"> Coonhound </option>
+			<option id="pt" value ="corgi/cardigan"> Welsh corgi cardigan </option>
+			<option id="pt" value ="cotondetulear"> Coton de Tulear </option>
+			<option id="pt" value ="dachshund"> Dachshund </option>
+			<option id="pt" value ="dalmatian"> Dálmata (cão) </option>
+			<option id="pt" value ="dane/great"> Dogue alemão </option>
+			<option id="pt" value ="deerhound/scottish"> Deerhound </option>
+			<option id="pt" value ="dhole"> Cão-selvagem-asiático </option>
+			<option id="pt" value ="dingo"> Dingo </option>
+			<option id="pt" value ="doberman"> Dobermann </option>
+			<option id="pt" value ="elkhound/norwegian"> Elkhound </option>
+			<option id="pt" value ="entlebucher"> Boiadeiro de Entlebuch </option>
+			<option id="en" value="eskimo"> American Eskimo Dog </option> 
+			<option id="pt" value ="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
+			<option id="pt" value ="frise/bichon"> Bichon Frisé </option>
+			<option id="pt" value ="germanshepherd"> Pastor-alemão </option>
+			<option id="pt" value ="greyhound/italian"> Galguinho italiano </option>
+			<option id="pt" value ="groenendael"> Pastor Belga Groenendael </option>
+			<option id="pt" value ="havanese"> Bichon havanês </option>
+			<option id="pt" value ="hound/afghan"> Galgo afegão </option>
+			<option id="pt" value ="hound/basset"> Basset Hound </option>
+			<option id="pt" value ="hound/blood"> Cão-de-santo-humberto </option>
+			<option id="pt" value ="hound/english"> Foxhound-inglês </option>
+			<option id="pt" value ="hound/ibizan"> Podengo ibicenco </option>
+			<option id="en" value="hound/plott"> Plott Hound </option>
+			<option id="pt" value ="hound/walker"> Treeing Walker Coonhound </option>
+			<option id="en" value ="husky"> Husky </option>
+			<option id="pt" value ="keeshond"> Keeshond </option>
+			<option id="pt" value ="kelpie"> Kelpie australiano </option>
+			<option id="pt" value ="komondor"> Komondor </option>
+			<option id="pt" value ="kuvasz"> Kuvasz </option>
+			<option id="pt" value ="labradoodle"> Labradoodle </option>
+			<option id="pt" value ="labrador"> Labrador retriever </option>
+			<option id="pt" value ="leonberg"> Leonberger </option>
+			<option id="pt" value ="lhasa"> Lhasa apso </option>
+			<option id="pt" value ="malamute"> Malamute-do-alasca </option>
+			<option id="pt" value ="malinois"> Pastor-belga-malinois </option>
+			<option id="pt" value ="maltese"> Maltês (cão) </option>
+			<option id="pt" value ="mastiff/bull"> Bulmastife </option>
+			<option id="pt" value ="mastiff/english"> Mastim Inglês </option>
+			<option id="pt" value ="mastiff/tibetan"> Mastim tibetano </option>
+			<option id="pt" value ="mexicanhairless"> Pelado-mexicano </option>
 			<!-- <option value="mix"> </option> seria o vira-lata? -->
-			<option value="mountain/bernese"> Boiadeiro de Berna </option>
-			<option value="mountain/swiss"> Grande boiadeiro suíço </option>
-			<option value="newfoundland"> Terra-nova (cão) </option>
-			<option value="otterhound"> Otterhound </option>
+			<option id="pt" value ="mountain/bernese"> Boiadeiro de Berna </option>
+			<option id="pt" value ="mountain/swiss"> Grande boiadeiro suíço </option>
+			<option id="pt" value ="newfoundland"> Terra-nova (cão) </option>
+			<option id="pt" value ="otterhound"> Otterhound </option>
+			<option id="pt" value ="ovcharka/caucasian"> Pastor-do-cáucaso </option>
+			<option id="pt" value ="papillon"> Spaniel anão continental </option>
+			<option id="pt" value ="pekinese"> Pequinês </option>
+			<option id="pt" value ="pembroke"> Welsh corgi pembroke </option>
+			<option id="pt" value ="pinscher/miniature"> Pinscher miniatura </option>
+			<option id="pt" value ="pitbull"> American pit bull terrier </option>
+			<option id="pt" value ="pointer/german"> Braco alemão de pelo curto </option>
+			<option id="pt" value ="pointer/germanlonghair"> Braco alemão de pelo longo </option>
+			<option id="pt" value ="pomeranian"> Zwergspitz </option>
+			<!-- <option value="poodle/medium"> ? </option> na Wikipedia aparentemente só tem um verbete de poodle 
+			<option value="poodle/miniature"> ? </option>
+			<option value="poodle/standard"> ? </option>
+			<option value="poodle/toy"> ? </option> -->
+			<option id="pt" value ="pug"> Pug </option>
+			<option id="en" value="puggle"> Puggle </option> <!-- ver como traduzir texto em inglês-->
+			<option id="pt" value ="pyrenees"> Cão de montanha dos Pirenéus </option>
+			<option id="pt" value ="redbone"> Redbone Coonhound </option>
+			<option id="pt" value ="retriever/chesapeake"> Chesapeake bay retriever </option>
+			<option id="pt" value ="retriever/curly"> Curly coated retriever </option>
+			<option id="pt" value ="retriever/flatcoated"> Flat-coated retriever </option>
+			<option id="pt" value ="retriever/golden"> Golden retriever </option>
+			<option id="pt" value ="ridgeback/rhodesian"> Rhodesian ridgeback </option>
+			<option id="pt" value ="rottweiler"> Rottweiler </option>
 		</select>
 	</div>
 	<div class="flex-container">
