--- a/index.html
+++ b/index.html
@@ -16,101 +16,151 @@
 		<select id="select_cao" required="required">
 			<option selected disabled> Selecione uma raça </option>
 			<option id="pt" value="affenpinscher"> Affenpinscher </option>
-			<option id="pt" value="african"> Mabeco </option>
 			<option id="pt" value="airedale"> Airedale terrier</option>
 			<option id="pt" value="akita"> Akita Inu </option>
-			<option id="pt" value="appenzeller"> Boiadeiro de Appenzell </option>
-			<option id="pt" value="australian/shepherd"> Pastor-australiano </option>
+			<option id="en" value="eskimo"> American Eskimo Dog </option> 
+			<option id="pt" value ="pitbull"> American pit bull terrier </option>
+			<option id="pt" value ="terrier/american"> Amstaff </option>
 			<option id="pt" value="basenji"> Basenji </option>
+			<option id="pt" value ="hound/basset"> Basset Hound </option>
 			<option id="pt" value="beagle"> Beagle </option>
+			<option id="pt" value ="terrier/bedlington"> Bedlington terrier  </option>
+			<option id="pt" value ="frise/bichon"> Bichon Frisé </option>
+			<option id="pt" value ="havanese"> Bichon havanês </option>
+			<option id="pt" value ="maltese"> Bichon maltês </option>
+			<option id="pt" value ="hound/blood"> Bloodhound </option>
 			<option id="pt" value="bluetick"> Bluetick Coonhound </option>
-			<option id="pt" value="borzoi"> Borzoi </option>
 			<option id="pt" value="bouvier"> Boiadeiro da Flandres </option>
-			<option id="pt" value="boxer"> Boxer </option>
-			<option id="pt" value="brabancon"> Griffon de Bruxelas </option>
-			<option id="pt" value="briard"> Pastor-de-brie </option>
-			<option id="pt" value="buhund/norwegian"> Buhund norueguês </option>
-			<option id="pt" value="bulldog/boston"> Boston terrier </option>
-			<option id="pt" value="bulldog/english"> Buldogue inglês </option>
-			<option id="pt" value="bulldog/french"> Buldogue francês </option>
-			<option id="pt" value ="bullterrier/staffordshire"> Staffordshire bull terrier </option>
+			<option id="pt" value="appenzeller"> Boiadeiro de Appenzell </option>
+			<option id="pt" value ="mountain/bernese"> Boiadeiro de Berna </option>
+			<option id="pt" value ="entlebucher"> Boiadeiro de Entlebuch </option>
 			<option id="pt" value ="cattledog/australian"> Boiadeiro-australiano </option>
-			<option id="pt" value ="cavapoo"> Cavapoo </option>
+			<option id="pt" value ="collie/border"> Border collie </option>
+			<option id="pt" value ="terrier/border"> Border terrier </option>
+			<option id="pt" value="borzoi"> Borzoi </option>
+			<option id="pt" value="bulldog/boston"> Boston terrier </option>
+			<option id="pt" value="boxer"> Boxer </option>
+			<option id="pt" value ="pointer/german"> Braco alemão de pelo curto </option>
+			<option id="pt" value ="pointer/germanlonghair"> Braco alemão de pelo longo </option>
+			<option id="pt" value ="vizsla"> Braco húngaro de pelo curto </option>
+			<option id="pt" value="buhund/norwegian"> Buhund norueguês </option>
+			<option id="pt" value="bulldog/french"> Buldogue francês </option>
+			<option id="pt" value="bulldog/english"> Buldogue inglês </option>
+			<option id="pt" value ="mastiff/bull"> Bulmastife </option>
+			<option id="pt" value ="terrier/cairn"> Cairn terrier </option>
+			<option id="pt" value ="waterdog/spanish"> Cão d'água espanhol </option>
+			<option id="pt" value ="spaniel/irish"> Cão d'água irlandês </option>
+			<option id="pt" value ="pyrenees"> Cão dos pirinéus </option>
+			<option id="pt" value ="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
+			<option id="pt" value ="spaniel/blenheim"> Cavalier King Charles Spaniel </option>
+			<option id="en" value ="cavapoo"> Cavapoo </option>
+			<option id="pt" value ="retriever/chesapeake"> Chesapeake bay retriever </option>
 			<option id="pt" value ="chihuahua"> Chihuahua (cão) </option>
 			<option id="pt" value ="chow"> Chow-chow </option>
 			<option id="pt" value ="clumber"> Clumber spaniel </option>
 			<option id="pt" value ="cockapoo"> Cockapoo </option>
-			<option id="pt" value ="collie/border"> Border collie </option>
+			<option id="pt" value ="spaniel/cocker"> Cocker spaniel inglês </option>
 			<option id="pt" value ="coonhound"> Coonhound </option>
-			<option id="pt" value ="corgi/cardigan"> Welsh corgi cardigan </option>
 			<option id="pt" value ="cotondetulear"> Coton de Tulear </option>
+			<option id="pt" value ="retriever/curly"> Curly coated retriever </option>
 			<option id="pt" value ="dachshund"> Dachshund </option>
 			<option id="pt" value ="dalmatian"> Dálmata (cão) </option>
-			<option id="pt" value ="dane/great"> Dogue alemão </option>
+			<option id="pt" value ="terrier/dandie"> Dandie dinmont terrier </option>
 			<option id="pt" value ="deerhound/scottish"> Deerhound </option>
-			<option id="pt" value ="dhole"> Cão-selvagem-asiático </option>
+			<option id="pt" value ="dhole"> Dhole </option>
 			<option id="pt" value ="dingo"> Dingo </option>
 			<option id="pt" value ="doberman"> Dobermann </option>
+			<option id="pt" value ="dane/great"> Dogue alemão </option>
 			<option id="pt" value ="elkhound/norwegian"> Elkhound </option>
-			<option id="pt" value ="entlebucher"> Boiadeiro de Entlebuch </option>
-			<option id="en" value="eskimo"> American Eskimo Dog </option> 
-			<option id="pt" value ="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
-			<option id="pt" value ="frise/bichon"> Bichon Frisé </option>
-			<option id="pt" value ="germanshepherd"> Pastor-alemão </option>
-			<option id="pt" value ="greyhound/italian"> Galguinho italiano </option>
-			<option id="pt" value ="groenendael"> Pastor Belga Groenendael </option>
-			<option id="pt" value ="havanese"> Bichon havanês </option>
-			<option id="pt" value ="hound/afghan"> Galgo afegão </option>
-			<option id="pt" value ="hound/basset"> Basset Hound </option>
-			<option id="pt" value ="hound/blood"> Cão-de-santo-humberto </option>
+			<option id="pt" value ="retriever/flatcoated"> Flat-coated retriever </option>
+			<option id="pt" value ="terrier/fox"> Fox terrier </option>
 			<option id="pt" value ="hound/english"> Foxhound-inglês </option>
-			<option id="pt" value ="hound/ibizan"> Podengo ibicenco </option>
-			<option id="en" value="hound/plott"> Plott Hound </option>
-			<option id="pt" value ="hound/walker"> Treeing Walker Coonhound </option>
+			<option id="pt" value ="hound/afghan"> Galgo afegão </option>
+			<option id="pt" value ="greyhound/italian"> Galguinho italiano </option>
+			<option id="pt" value ="retriever/golden"> Golden retriever </option>
+			<option id="pt" value ="mountain/swiss"> Grande boiadeiro suíço </option>
+			<option id="pt" value="brabancon"> Griffon de Bruxelas </option>
 			<option id="en" value ="husky"> Husky </option>
+			<option id="pt" value ="terrier/russell"> Jack russell terrier </option>
 			<option id="pt" value ="keeshond"> Keeshond </option>
 			<option id="pt" value ="kelpie"> Kelpie australiano </option>
+			<option id="pt" value ="terrier/kerryblue"> Kerry blue terrier  </option>
 			<option id="pt" value ="komondor"> Komondor </option>
 			<option id="pt" value ="kuvasz"> Kuvasz </option>
 			<option id="pt" value ="labradoodle"> Labradoodle </option>
 			<option id="pt" value ="labrador"> Labrador retriever </option>
+			<option id="pt" value ="terrier/lakeland"> Lakeland terrier </option>
+			<option id="pt" value ="wolfhound/irish"> Lebrel irlandês </option>
 			<option id="pt" value ="leonberg"> Leonberger </option>
 			<option id="pt" value ="lhasa"> Lhasa apso </option>
-			<option id="pt" value ="malamute"> Malamute-do-alasca </option>
-			<option id="pt" value ="malinois"> Pastor-belga-malinois </option>
-			<option id="pt" value ="maltese"> Maltês (cão) </option>
-			<option id="pt" value ="mastiff/bull"> Bulmastife </option>
+			<option id="pt" value ="pomeranian"> Lulu da Pomerânia </option>
+			<option id="pt" value="african"> Mabeco </option>
+			<option id="pt" value ="malamute"> Malamute </option>
 			<option id="pt" value ="mastiff/english"> Mastim Inglês </option>
 			<option id="pt" value ="mastiff/tibetan"> Mastim tibetano </option>
-			<option id="pt" value ="mexicanhairless"> Pelado-mexicano </option>
-			<!-- <option value="mix"> </option> seria o vira-lata? -->
-			<option id="pt" value ="mountain/bernese"> Boiadeiro de Berna </option>
-			<option id="pt" value ="mountain/swiss"> Grande boiadeiro suíço </option>
-			<option id="pt" value ="newfoundland"> Terra-nova (cão) </option>
+			<option id="pt" value="terrier/norfolk"> Norfolk terrier </option>
+			<option id="pt" value ="terrier/norwich"> Norwich terrier </option>
+			<option id="pt" value="sheepdog/english"> Old english sheepdog </option>
 			<option id="pt" value ="otterhound"> Otterhound </option>
+			<option id="pt" value ="germanshepherd"> Pastor alemão </option>
+			<option id="pt" value ="groenendael"> Pastor Belga Groenendael </option>
+			<option id="pt" value="australian/shepherd"> Pastor-australiano </option>
+			<option id="pt" value ="malinois"> Pastor-belga-malinois </option>
+			<option id="pt" value="briard"> Pastor-de-brie </option>
+			<option id="pt" value ="sheepdog/shetland"> Pastor-de-shetland </option>
 			<option id="pt" value ="ovcharka/caucasian"> Pastor-do-cáucaso </option>
-			<option id="pt" value ="papillon"> Spaniel anão continental </option>
+			<option id="pt" value ="terrier/patterdale"> Patterdale terrier </option>
+			<option id="pt" value ="mexicanhairless"> Pelado-mexicano </option>
 			<option id="pt" value ="pekinese"> Pequinês </option>
-			<option id="pt" value ="pembroke"> Welsh corgi pembroke </option>
 			<option id="pt" value ="pinscher/miniature"> Pinscher miniatura </option>
-			<option id="pt" value ="pitbull"> American pit bull terrier </option>
-			<option id="pt" value ="pointer/german"> Braco alemão de pelo curto </option>
-			<option id="pt" value ="pointer/germanlonghair"> Braco alemão de pelo longo </option>
-			<option id="pt" value ="pomeranian"> Zwergspitz </option>
-			<!-- <option value="poodle/medium"> ? </option> na Wikipedia aparentemente só tem um verbete de poodle 
-			<option value="poodle/miniature"> ? </option>
-			<option value="poodle/standard"> ? </option>
-			<option value="poodle/toy"> ? </option> -->
+			<option id="en" value="hound/plott"> Plott Hound </option>
+			<option id="pt" value ="hound/ibizan"> Podengo ibicenco </option>
+			<option id="pt" value ="poodle"> Poodle </option>
 			<option id="pt" value ="pug"> Pug </option>
 			<option id="en" value="puggle"> Puggle </option> <!-- ver como traduzir texto em inglês-->
-			<option id="pt" value ="pyrenees"> Cão de montanha dos Pirenéus </option>
 			<option id="pt" value ="redbone"> Redbone Coonhound </option>
-			<option id="pt" value ="retriever/chesapeake"> Chesapeake bay retriever </option>
-			<option id="pt" value ="retriever/curly"> Curly coated retriever </option>
-			<option id="pt" value ="retriever/flatcoated"> Flat-coated retriever </option>
-			<option id="pt" value ="retriever/golden"> Golden retriever </option>
 			<option id="pt" value ="ridgeback/rhodesian"> Rhodesian ridgeback </option>
 			<option id="pt" value ="rottweiler"> Rottweiler </option>
+			<option id="pt" value ="segugio/italian"> Sabujo italiano de pelo curto </option>
+			<option id="pt" value ="saluki"> Saluki </option>
+			<option id="pt" value ="samoyed"> Samoieda </option>
+			<option id="pt" value ="stbernard"> São-bernardo </option>
+			<option id="pt" value ="schipperke"> Schipperke </option>
+			<option id="pt" value ="schnauzer/giant"> Schnauzer gigante </option>
+			<option id="pt" value ="schnauzer/miniature"> Schnauzer miniatura </option>
+			<option id="pt" value ="terrier/sealyham"> Sealyham terrier </option>
+			<option id="pt" value ="setter/gordon"> Setter gordon </option>
+			<option id="pt" value ="setter/english"> Setter inglês </option>
+			<option id="pt" value ="setter/irish"> Setter irlandês </option>
+			<option id="pt" value ="sharpei"> Shar Pei </option>
+			<option id="pt" value ="shiba"> Shiba inu </option>
+			<option id="pt" value ="shihtzu"> Shih-tzu </option>
+			<option id="pt" value ="terrier/silky"> Silky terrier </option>
+			<option id="pt" value ="terrier/wheaten"> Soft coated wheaten terrier </option>
+			<option id="pt" value ="papillon"> Spaniel anão continental </option>
+			<option id="pt" value ="spaniel/brittany"> Spaniel bretão </option>
+			<option id="pt" value ="spaniel/japanese"> Spaniel japonês </option>
+			<option id="pt" value ="spitz/japanese"> Spitz japonês </option>
+			<option id="pt" value ="spaniel/welsh"> Springer spaniel de Gales </option>
+			<option id="pt" value ="springer/english"> Springer spaniel inglês </option>
+			<option id="pt" value ="bullterrier/staffordshire"> Staffordshire bull terrier </option>
+			<option id="pt" value ="spaniel/sussex"> Sussex spaniel </option>
+			<option id="pt" value ="newfoundland"> Terra-nova (cão) </option>
+			<option id="pt" value ="terrier/australian"> Terrier australiano </option>
+			<option id="pt" value ="terrier/scottish"> Terrier escocês </option>
+			<option id="pt" value ="terrier/irish"> Terrier irlandês </option>
+			<option id="pt" value ="terrier/tibetan"> Terrier tibetano </option>
+			<option id="en" value ="tervuren"> Tervuren dog </option>
+			<option id="en" value ="terrier/toy"> Toy Manchester Terrier </option>
+			<option id="pt" value ="hound/walker"> Treeing Walker Coonhound </option>
+			<option id="pt" value="mix"> Vira-lata </option>
+			<option id="pt" value ="weimaraner"> Weimaraner </option>
+			<option id="pt" value ="corgi/cardigan"> Welsh corgi cardigan </option>
+			<option id="pt" value ="pembroke"> Welsh corgi pembroke </option>
+			<option id="pt" value ="terrier/welsh"> Welsh terrier </option>
+			<option id="pt" value ="terrier/westhighland"> West highland white terrier </option>
+			<option id="pt" value ="whippet"> Whippet </option>
+			<option id="pt" value ="terrier/yorkshire"> Yorkshire terrier </option>
 		</select>
 	</div>
 	<div class="flex-container">
