Adição de imagem de fundo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+	<div id="bg_image"></div>
 	<div>
 		<h2 id="titulo"> Selecione uma raça de cachorro para ver informações sobre ela </h2>
 		<select id="select_cao" required="required">
