Tradução das raças em inglês e ajuste no background de imagem

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 			<option class="pt" value="affenpinscher"> Affenpinscher </option>
 			<option class="pt" value="airedale"> Airedale terrier</option>
 			<option class="pt" value="akita"> Akita Inu </option>
-			<option class="en" value="eskimo"> American Eskimo Dog </option> 
 			<option class="pt" value ="pitbull"> American pit bull terrier </option>
 			<option class="pt" value ="terrier/american"> Amstaff </option>
 			<option class="pt" value="basenji"> Basenji </option>
@@ -51,10 +50,11 @@
 			<option class="pt" value ="terrier/cairn"> Cairn terrier </option>
 			<option class="pt" value ="waterdog/spanish"> Cão d'água espanhol </option>
 			<option class="pt" value ="spaniel/irish"> Cão d'água irlandês </option>
+			<option class="en" value="eskimo"> Cão Esquimó Americano </option> 
 			<option class="pt" value ="pyrenees"> Cão dos pirinéus </option>
 			<option class="pt" value ="finnish/lapphund"> Cão-finlandês-da-lapônia </option>
 			<option class="pt" value ="spaniel/blenheim"> Cavalier King Charles Spaniel </option>
-			<option class="en" value ="cavapoo"> Cavapoo </option>
+			<!-- <option class="en" value ="cavapoo"> Cavapoo </option> -->
 			<option class="pt" value ="retriever/chesapeake"> Chesapeake bay retriever </option>
 			<option class="pt" value ="chihuahua"> Chiuaua </option>
 			<option class="pt" value ="chow"> Chow-chow </option>
@@ -107,6 +107,7 @@
 			<option class="pt" value ="groenendael"> Pastor Belga Groenendael </option>
 			<option class="pt" value="australian/shepherd"> Pastor-australiano </option>
 			<option class="pt" value ="malinois"> Pastor-belga-malinois </option>
+			<option class="en" value ="tervuren"> Pastor-belga Tervueren </option>
 			<option class="pt" value="briard"> Pastor-de-brie </option>
 			<option class="pt" value ="sheepdog/shetland"> Pastor-de-shetland </option>
 			<option class="pt" value ="ovcharka/caucasian"> Pastor-do-cáucaso </option>
@@ -118,7 +119,7 @@
 			<option class="pt" value ="hound/ibizan"> Podengo ibicenco </option>
 			<option class="pt" value ="poodle"> Poodle </option>
 			<option class="pt" value ="pug"> Pug </option>
-			<option class="en" value="puggle"> Puggle </option> <!-- ver como traduzir texto em inglês-->
+			<option class="en" value="puggle"> Puggle </option>
 			<option class="pt" value ="redbone"> Redbone Coonhound </option>
 			<option class="pt" value ="ridgeback/rhodesian"> Rhodesian ridgeback </option>
 			<option class="pt" value ="rottweiler"> Rottweiler </option>
@@ -151,7 +152,6 @@
 			<option class="pt" value ="terrier/scottish"> Terrier escocês </option>
 			<option class="pt" value ="terrier/irish"> Terrier irlandês </option>
 			<option class="pt" value ="terrier/tibetan"> Terrier tibetano </option>
-			<option class="en" value ="tervuren"> Tervuren dog </option>
 			<option class="en" value ="terrier/toy"> Toy Manchester Terrier </option>
 			<option class="pt" value ="hound/walker"> Treeing Walker Coonhound </option>
 			<option class="pt" value="mix"> Vira-lata </option>
