Correção do título do Lebrel Irlandês

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<option class="pt" value ="labradoodle"> Labradoodle </option>
 			<option class="pt" value ="labrador"> Labrador retriever </option>
 			<option class="pt" value ="terrier/lakeland"> Lakeland terrier </option>
-			<option class="pt" value ="wolfhound/irish"> Lebrel irlandês </option>
+			<option class="pt" value ="wolfhound/irish"> Lébrel irlandês </option>
 			<option class="pt" value ="leonberg"> Leonberger </option>
 			<option class="pt" value ="lhasa"> Lhasa apso </option>
 			<option class="pt" value ="pomeranian"> Lulu da Pomerânia </option>
