--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-  <title>Imagens de cachorros</title>
-    
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+	<link rel="icon" type="image/x-icon" href="../img/pata_cao.png">
+	<title>Imagens de cachorros</title>
+
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 		<img id="img_cao" />
 		<p id="desc_cao"></p>
 	</div>
-	<script src="js/chamadasApi.js"></script>
+	<script type="module" src="js/app.js"></script>
 </body>
 
 </html>
