Disposição das informações dos cães em cards responsivos

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 			<option selected disabled> Selecione uma raça </option>
 		</select>
 	</div>
-	<div class="flex-container">
+	<div id="card" style="display: none">
 		<div id="c-loader" style="display: none"></div>
 		<img id="img_cao" />
 		<p id="desc_cao"></p>
 	</div>
 	<script type="module" src="js/app.js"></script>
 </body>
-
 </html>
